--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
     <main>
         <div class="welcome">
+            <img src="logo.png" alt="Logo" class="welcome-logo">
             <h2>WELCOME!</h2>
             <p>This website aims to provide custom Avatar Decorations to be used with Decor, the Vencord plugin.</p>
             <p><strong>Important:</strong> This website is non-commercial, has no ads, and is open source.</p>
