--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <header>
         <div class="container">
-            </div>
-            <h1>Jelly's Space</h1>
+            <h1>Custom Avatar Decors</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
