--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Decorations</a></li>
-                    <li><a href="#">How To Use</a></li>
+                    <li><a href="#">Guide</a></li>
                     <li><a href="#">Credits</a></li>
                 </ul>
             </nav>
