--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jelly's Space</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Favicon links -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#e073c3">
+    <meta name="msapplication-TileColor" content="#e78ada">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Open Graph meta tags -->
+    <meta name="theme-color" content="#17b3e3">
+    <meta property="og:title" content="Jelly's Space">
+    <meta property="og:description" content="Custom Avatar Decorations for the Decor Plugin for Vencord.">
+    <meta property="og:image" content="https://i.imgur.com/tAEBzZd.png">
+    <meta property="og:url" content="https://jellys-space.github.io/avatar-decors/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Welcome To">
 </head>
 <body>
     <header>
@@ -26,7 +45,7 @@
             <h2>WELCOME!</h2>
             <p>This website aims to provide custom Avatar Decorations to be used with Decor, the Vencord plugin.</p>
             <p><strong>Important:</strong> This website is non-commercial, has no ads, and is open source.</p>
-            <p>All decors hosted on this site were provided by the artists</p>
+            <p>All decors hosted on this site were provided by the artists.</p>
             <img src="jelly.png" alt="jelly" class="avatar">
         </div>
     </main>
