--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Open Graph meta tags -->
-    <meta name="theme-color" content="#17b3e3">
+    <meta name="theme-color" content="#e897e8">
     <meta property="og:title" content="Jelly's Space">
     <meta property="og:description" content="Custom Avatar Decorations for the Decor Plugin for Vencord.">
     <meta property="og:image" content="https://i.imgur.com/tAEBzZd.png">
