--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jelly's Space</title>
+    <title>Jelly's Space - Avatar Decorations</title>
     <link rel="stylesheet" href="styles.css">
 
     <!-- Favicon links -->
