--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Jelly's Space</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
                     <li><a href="#">Decorations</a></li>
                     <li><a href="#">Guide</a></li>
                     <li><a href="#">Credits</a></li>
