--- a/credits/credits.html
+++ b/credits/credits.html
@@ -41,12 +41,12 @@
     </header>
     <main>
         <div class="welcome">
-            <img src="logo.png" alt="Logo" class="welcome-logo">
-            <h2>WELCOME!</h2>
-            <p>This website aims to provide custom Avatar Decorations to be used with Decor, the Vencord plugin.</p>
-            <p><strong>Important:</strong> This website is non-commercial, has no ads, and is open source.</p>
-            <p>All decors hosted on this site were provided by the artists.</p>
-            <img src="jelly.png" alt="jelly" class="avatar">
+            <img src="../logo.png" alt="Logo" class="welcome-logo">
+            <h2>CREDITS:</h2>
+            <p>Here, you'll find the website credits; aka, those who worked on the website itself.</p>
+            <p>These people dedicated their free time to bring the site to life!</p>
+            <p>Credits for the decorations can be found in the decorations page for each category.</p>
+            <img src="credits/jelly.png" alt="jelly" class="avatar">
         </div>
     </main>
 </body>
