--- a/credits/credits.html
+++ b/credits/credits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jelly's Space - Avatar Decors</title>
-    <link rel="stylesheet" href="credits/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- Favicon links -->
     <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -46,7 +46,7 @@
             <p>Here, you'll find the website credits; aka, those who worked on the website itself.</p>
             <p>These people dedicated their free time to bring the site to life!</p>
             <p>Credits for the decorations can be found in the decorations page for each category.</p>
-            <img src="credits/jelly.png" alt="jelly" class="avatar">
+            <img src="jelly.png" alt="jelly" class="avatar">
         </div>
     </main>
 </body>
