--- a/credits/credits.html
+++ b/credits/credits.html
@@ -34,7 +34,7 @@
                     <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
                     <li><a href="#">Decorations</a></li>
                     <li><a href="#">Guide</a></li>
-                    <li><a href="credits/credits">Credits</a></li>
+                    <li><a href="credits">Credits</a></li>
                 </ul>
             </nav>
         </div>
