--- a/credits/index.html
+++ b/credits/index.html
@@ -34,7 +34,7 @@
                     <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
                     <li><a href="#">Decorations</a></li>
                     <li><a href="#">Guide</a></li>
-                    <li><a href="https://owoitssylvie.github.io/avatar-decors/credits/">Credits</a></li>
+                    <li><a href="credits">Credits</a></li>
                 </ul>
             </nav>
         </div>
@@ -46,6 +46,35 @@
             <p>Here, you'll find the website credits; aka, those who worked on the website itself.</p>
             <p>These people dedicated their free time to bring the site to life!</p>
             <p>Credits for the decorations can be found in the decorations page for each category.</p>
+            
+            <!-- New Disclaimer Section -->
+            <section class="disclaimer">
+                <h3>Disclaimer</h3>
+                <p>All credits I could find are listed below.</p>
+                <p>If you encounter a “Decoration already exists” error, please use the following link to change the hash: <a href="#">Hash Change Tool</a></p>
+                <p>If that doesn’t work, use this tool to make it slightly faster (or slower) and re-generate a hash (also works with apngs): <a href="#">Speed Tool</a></p>
+                <p>!!!NO COPYRIGHT INFRINGEMENT IS INTENDED!!! In the event of unintentional infringement, please reach out to me in the Decor Discord Server and I will be more than happy to remove the infringed material - no questions asked. (Display Name: Jelly💖) <a href="#">Join the Decor Discord Server</a></p>
+            </section>
+
+            <!-- New Translators Section -->
+            <section class="translators">
+                <h3>TRANSLATORS</h3>
+                <ul>
+                    <li><strong>English:</strong> Jelly</li>
+                    <li><strong>British:</strong> Jelly</li>
+                    <li><strong>Spanish:</strong> jissoho</li>
+                    <li><strong>Arabic:</strong> jissoho</li>
+                    <li><strong>French:</strong> jissoho</li>
+                    <li><strong>Russian:</strong> jissoho</li>
+                    <li><strong>German:</strong> jissoho</li>
+                    <li><strong>Lithuanian:</strong> mikyu</li>
+                    <li><strong>Romanian:</strong> sharsame</li>
+                    <li><strong>Italian:</strong> Treta</li>
+                    <li><strong>Turkish:</strong> Naturr</li>
+                    <li><strong>Hungarian:</strong> lecdeeee</li>
+                </ul>
+            </section>
+
             <img src="jelly.png" alt="jelly" class="avatar">
         </div>
     </main>
