--- a/credits/index.html
+++ b/credits/index.html
@@ -43,23 +43,22 @@
         <div class="welcome">
             <img src="../logo.png" alt="Logo" class="welcome-logo">
             <h2>CREDITS:</h2>
-            <p>Here, you'll find the website credits; aka, those who worked on the website itself.</p>
-            <p>These people dedicated their free time to bring the site to life!</p>
+            <p>Here, you'll find the website credits; aka, those who worked on the website itself. These people dedicated their free time to bring the site to life!</p>
             <p>Credits for the decorations can be found in the decorations page for each category.</p>
             
             <!-- New Disclaimer Section -->
             <section class="disclaimer">
-                <h3>Disclaimer</h3>
-                <p>All credits I could find are listed below.</p>
-                <p>If you encounter a “Decoration already exists” error, please use the following link to change the hash: <a href="#">Hash Change Tool</a></p>
-                <p>If that doesn’t work, use this tool to make it slightly faster (or slower) and re-generate a hash (also works with apngs): <a href="#">Speed Tool</a></p>
-                <p>!!!NO COPYRIGHT INFRINGEMENT IS INTENDED!!! In the event of unintentional infringement, please reach out to me in the Decor Discord Server and I will be more than happy to remove the infringed material - no questions asked. (Display Name: Jelly💖) <a href="#">Join the Decor Discord Server</a></p>
+                <h3>General Credits:</h3>
+                <p>Web Developer: Jelly</p>
+                <p>Logo/Favicon: Jelly</p>
+                <p>Jellyfish Placeholder Art: <a href="https://store.line.me/stickershop/author/20985/en">Warabi Mochikichi</a></p>
             </section>
 
             <!-- New Translators Section -->
             <section class="translators">
                 <h3>TRANSLATORS</h3>
                 <ul>
+                    <li>This is just placeholder text and will be updated eventually.</li>
                     <li><strong>English:</strong> Jelly</li>
                     <li><strong>British:</strong> Jelly</li>
                     <li><strong>Spanish:</strong> jissoho</li>
