--- a/credits/index.html
+++ b/credits/index.html
@@ -46,15 +46,15 @@
             <p>Here, you'll find the website credits; aka, those who worked on the website itself. These people dedicated their free time to bring the site to life!</p>
             <p>Credits for the decorations can be found in the decorations page for each category.</p>
             
-            <!-- New Disclaimer Section -->
+            <!-- Disclaimer Section -->
             <section class="disclaimer">
                 <h3>General Credits:</h3>
                 <p>Web Developer: Jelly</p>
                 <p>Logo/Favicon: Jelly</p>
-                <p>Jellyfish Placeholder Art: <a href="https://store.line.me/stickershop/author/20985/en">Warabi Mochikichi</a></p>
+                <p>Jellyfish Placeholder Art: <a href="https://store.line.me/stickershop/author/20985/en" style="color: #7289DA; text-decoration: none;">Warabi Mochikichi</a></p>
             </section>
 
-            <!-- New Translators Section -->
+            <!-- Translators Section -->
             <section class="translators">
                 <h3>TRANSLATORS</h3>
                 <ul>
