--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <nav>
                 <ul>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
-                    <li><a href="#">Decorations</a></li>
-                    <li><a href="#">Guide</a></li>
+                    <li><a href="decors">Decorations</a></li>
+                    <li><a href="guide">Guide</a></li>
                     <li><a href="credits">Credits</a></li>
                 </ul>
             </nav>
