--- a/decors/index.html
+++ b/decors/index.html
@@ -32,7 +32,7 @@
             <nav>
                 <ul>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
-                    <li><a href="#">Decorations</a></li>
+                    <li><a href="https://owoitssylvie.github.io/avatar-decors/decors">Decorations</a></li>
                     <li><a href="#">Guide</a></li>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors/credits">Credits</a></li>
                 </ul>
