--- a/decors/index.html
+++ b/decors/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image" content="https://i.imgur.com/tAEBzZd.png">
     <meta property="og:url" content="https://jellys-space.github.io/avatar-decors/">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Credits">
+    <meta property="og:site_name" content="Avatar Decors">
 </head>
 <body>
     <header>
@@ -33,49 +33,34 @@
                 <ul>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors/decors">Decorations</a></li>
-                    <li><a href="#">Guide</a></li>
+                    <li><a href="https://owoitssylvie.github.io/avatar-decors/guide">Guide</a></li>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors/credits">Credits</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
     <main>
-        <div class="welcome">
-            <img src="../logo.png" alt="Logo" class="welcome-logo">
-            <h2>CREDITS:</h2>
-            <p>Here, you'll find the website credits; aka, those who worked on the website itself. These people dedicated their free time to bring the site to life!</p>
-            <p>Credits for the decorations can be found in the decorations page for each category.</p>
-            
-            <!-- Disclaimer Section -->
-            <section class="disclaimer">
-                <h3>General Credits:</h3>
-                <p>Web Developer: Jelly</p>
-                <p>Logo/Favicon: Jelly</p>
-                <p>Jellyfish Placeholder Art: <a href="https://store.line.me/stickershop/author/20985/en" style="color: #7289DA; text-decoration: none;">Warabi Mochikichi</a></p>
-            </section>
+        <div class="decor-container">
+            <div class="dropdown-container">
+                <label for="artist-select">Choose an artist:</label>
+                <select id="artist-select">
+                    <option value="artist1">Artist 1</option>
+                    <option value="artist2">Artist 2</option>
+                    <option value="artist3">Artist 3</option>
+                    <option value="artist4">Artist 4</option>
+                    <option value="artist5">Artist 5</option>
+                    <option value="artist6">Artist 6</option>
+                </select>
+            </div>
 
-            <!-- Translators Section -->
-            <section class="translators">
-                <h3>TRANSLATORS</h3>
-                <ul>
-                    <li>This is just placeholder text and will be updated eventually.</li>
-                    <li><strong>English:</strong> Jelly</li>
-                    <li><strong>British:</strong> Jelly</li>
-                    <li><strong>Spanish:</strong> jissoho</li>
-                    <li><strong>Arabic:</strong> jissoho</li>
-                    <li><strong>French:</strong> jissoho</li>
-                    <li><strong>Russian:</strong> jissoho</li>
-                    <li><strong>German:</strong> jissoho</li>
-                    <li><strong>Lithuanian:</strong> mikyu</li>
-                    <li><strong>Romanian:</strong> sharsame</li>
-                    <li><strong>Italian:</strong> Treta</li>
-                    <li><strong>Turkish:</strong> Naturr</li>
-                    <li><strong>Hungarian:</strong> lecdeeee</li>
-                </ul>
-            </section>
-
-            <img src="jelly.png" alt="jelly" class="avatar">
+            <h2 id="artist-title">Artist 1's Decors:</h2>
+            <div id="decor-gallery" class="grid-container">
+                <!-- Image items will be dynamically inserted here -->
+            </div>
         </div>
     </main>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
