--- a/decors/index.html
+++ b/decors/index.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Jelly's Space</h1>
+            <h1 id="main_logo">Jelly's Space</h1>
             <nav>
                 <ul>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
