--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>This website aims to provide custom Avatar Decorations to be used with Decor, the Vencord plugin.</p>
             <p><strong>Important:</strong> This website is non-commercial, has no ads, and is open source.</p>
             <p>All decors hosted on this site were provided by the artists.</p>
-            <img src="jelly.png" alt="jelly" class="avatar">
+            <img src="jellyhome.png" alt="jelly" class="avatar">
         </div>
     </main>
 </body>
