--- a/credits/index.html
+++ b/credits/index.html
@@ -74,7 +74,7 @@
                 </ul>
             </section>
 
-            <img src="jelly.png" alt="jelly" class="avatar">
+            <img src="jellycredits.png" alt="jelly" class="avatar">
         </div>
     </main>
 </body>
