--- a/credits/index.html
+++ b/credits/index.html
@@ -33,7 +33,7 @@
                 <ul>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors">Home</a></li>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors/decors">Decorations</a></li>
-                    <li><a href="#">Guide</a></li>
+                    <li><a href="https://owoitssylvie.github.io/avatar-decors/guide">Guide</a></li>
                     <li><a href="https://owoitssylvie.github.io/avatar-decors/credits">Credits</a></li>
                 </ul>
             </nav>
