--- a/credits/index.html
+++ b/credits/index.html
@@ -50,8 +50,10 @@
             <section class="disclaimer">
                 <h3>General Credits:</h3>
                 <p>Web Developer: Jelly</p>
+                <p>Co-Web Developer: SpartanWynter</p>
+                <p>Co-Web Developer: jissoho</p>
                 <p>Logo/Favicon: Jelly</p>
-                <p>Jellyfish Placeholder Art: <a href="https://store.line.me/stickershop/author/20985/en" style="color: #7289DA; text-decoration: none;">Warabi Mochikichi</a></p>
+                <p>Jellyfish Footer Art: zin_ar</p>
             </section>
 
             <!-- Translators Section -->
